# random_number_generators

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  bibliography.bib  environment.yml  footcite.csl  main.tex  slides.md
.github/workflows/: rust.yml
presentation/: randu_figure.py  slides.md
rand_lcg/: Cargo.toml  README.md
rand_lcg/src/: lcg.rs  lib.rs
rand_lcg/tests/: lcg.rs
src/: lib.rs  main.rs
