[package]
name = "random_number_generators"
version = "0.1.0"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "rand_lcg",
    "rand_sfmt",
]

[dependencies]
itertools = "~0.8.0"
rand_core = "~0.5.0"
rand = "~0.7.0"
rand_pcg = "~0.2.0"
rand_xorshift = "~0.2.0"
rand_xoshiro = "~0.3.0"
clap = "~2.33"
rand_lcg = {path="rand_lcg", version="0.1"}
sfmt = {path="rand_sfmt", version="0.5"}
