[package]
name = "random_number_generators"
version = "0.2.0"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "rand_lcg",
]

[dependencies]
itertools = "~0.8.0"
rand_core = "~0.5.0"
rand = "~0.7.0"
rand_pcg = "~0.2.0"
rand_xorshift = "~0.2.0"
rand_xoshiro = "~0.3.1"
sfmt = {version="0.6.0", default-features=false}
clap = "~2.33"
rand_lcg = {path="rand_lcg", version="0.1"}
