[package]
name = "random_number_generators"
version = "0.2.1"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"
description = "A command line tool to compare a range of PRNGs."
repository = "https://github.com/malramsay64/random_number_generators"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "science"]
keywords = ["random", "PRNG"]



[workspace]
members = [
    "rand_lcg",
]

[dependencies]
itertools = "~0.8.1"
rand_core = "~0.5.0"
rand = "~0.7.0"
rand_pcg = "~0.2.0"
rand_xorshift = "~0.2.0"
rand_xoshiro = "~0.4.0"
sfmt = {version="0.6.0", default-features=false}
rand_lcg = {path="rand_lcg", version="0.1"}
clap = "~2.33.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
